--- a/env-gen/package.json
+++ b/env-gen/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "author": "",
   "license": "",
-  "main": "./dist/index.es.js",
+  "main": "./dist/index.js",
   "module": "./dist/index.es.js",
   "types": "./typings/types.d.ts",
   "description": "[WIP]",
@@ -50,6 +50,7 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "5.1.0",
+    "esm": "3.2.25",
     "kleur": "4.1.4",
     "mocha": "8.3.2",
     "prettier": "2.2.1",
