--- a/env-gen/package.json
+++ b/env-gen/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@signalchain/rollup-plugin-env-gen",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "author": "",
   "license": "",
-  "main": "./dist/index.js",
-  "module": "./dist/index.es.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
   "types": "./typings/types.d.ts",
   "description": "[WIP]",
   "keywords": [
@@ -31,6 +36,7 @@
     "dev": "cross-env PACKAGE_DEV=true rollup -c -w",
     "build": "cross-env NODE_ENV=true && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "minor": "npm run build && npm version minor --force && npm publish",
     "patch": "npm run build && npm version patch --force && npm publish"
   },
   "devDependencies": {
