--- a/examples/sapper/package.json
+++ b/examples/sapper/package.json
@@ -37,49 +37,49 @@
     "sirv": "1.0.11"
   },
   "devDependencies": {
-    "@babel/core": "7.13.16",
-    "@babel/eslint-parser": "7.13.14",
+    "@babel/core": "7.14.2",
+    "@babel/eslint-parser": "7.14.2",
     "@fullhuman/postcss-purgecss": "4.0.3",
-    "@rollup/plugin-commonjs": "18.0.0",
-    "@rollup/plugin-node-resolve": "11.2.1",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-url": "6.0.0",
-    "@signalchain/rollup-plugin-env-gen": "file:../env-gen",
+    "@signalchain/rollup-plugin-env-gen": "file:../../env-gen",
     "@signalchain/svelte-forms": "0.1.4",
     "@signalchain/utils": "0.1.6",
     "@testing-library/cypress": "7.0.6",
     "cross-env": "7.0.3",
-    "cssnano": "5.0.1",
-    "cypress": "7.1.0",
+    "cssnano": "5.0.2",
+    "cypress": "7.3.0",
     "cypress-plugin-tab": "1.0.5",
-    "eslint": "7.25.0",
+    "eslint": "7.26.0",
     "eslint-config-standard": "16.0.2",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-plugin-cypress": "2.11.2",
+    "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-json": "2.1.2",
+    "eslint-plugin-json": "3.0.0",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-svelte3": "3.2.0",
     "esm": "3.2.25",
     "fast-glob": "3.2.5",
-    "husky": "4.3.6",
-    "lint-staged": "10.5.3",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
     "lodash.merge": "4.6.2",
     "npm-run-all": "4.1.5",
-    "postcss": "8.2.12",
+    "postcss": "8.2.15",
     "postcss-easings": "3.0.1",
     "postcss-preset-env": "6.7.0",
-    "prettier": "2.2.1",
-    "prettier-plugin-svelte": "2.2.0",
-    "rollup": "2.45.2",
+    "prettier": "2.3.0",
+    "prettier-plugin-svelte": "2.3.0",
+    "rollup": "2.47.0",
     "rollup-plugin-svelte": "7.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sapper": "0.29.1",
-    "sass": "1.32.11",
-    "svelte": "3.37.0",
-    "svelte-preprocess": "4.7.2",
+    "sass": "1.32.13",
+    "svelte": "3.38.2",
+    "svelte-preprocess": "4.7.3",
     "svelte-select": "3.17.0"
   }
 }
