moved env-gen dir to package dir and added svelte kit example

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "scripts": {
     "dev": "run-p engine sapper",
-    "engine": "pushd env-gen && npm run dev",
-    "sapper": "sleep 4 && pushd example && npm run dev",
+    "engine": "cd package && npm run dev",
+    "sapper": "sleep 4 && cd examples/sapper && npm run dev",
+    "kit": "sleep 4 && cd examples/kit && npm run dev",
     "install:all": "sh ./scripts/install.sh",
-    "lint": "pushd .config && lint-staged",
+    "lint": "cd .config && lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
     "push": "sh ./scripts/push.sh",
     "postinstall": "rm -rf .config/husky && husky install .config/husky && husky add .config/husky/pre-commit \"npm run lint\""
