--- a/examples/sapper/package.json
+++ b/examples/sapper/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "node __sapper__/build",
-    "dev": "sapper dev",
+    "dev": "node -r esm node_modules/sapper/dist/cli.js dev",
     "build": "cross-env NODE_ENV=production sapper build",
     "export": "cross-env NODE_ENV=production sapper export",
     "test": "run-p --race cy:open cy:run",
@@ -18,14 +18,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "engines": {
-    "node": ">=14.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
     "dotenv": "8.2.0",
     "fastify": "3.14.2",
@@ -44,7 +36,7 @@
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-url": "6.0.0",
-    "@signalchain/rollup-plugin-env-gen": "file:../../env-gen",
+    "@signalchain/rollup-plugin-env-gen": "file:../../package",
     "@signalchain/svelte-forms": "0.1.4",
     "@signalchain/utils": "0.1.6",
     "@testing-library/cypress": "7.0.6",
@@ -64,7 +56,6 @@
     "eslint-plugin-svelte3": "3.2.0",
     "esm": "3.2.25",
     "fast-glob": "3.2.5",
-    "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "lodash.merge": "4.6.2",
     "npm-run-all": "4.1.5",
