--- a/package/package.json
+++ b/package/package.json
@@ -4,9 +4,11 @@
   "author": "",
   "license": "",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   },
