added typescript strict

--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -3,6 +3,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": true,
+    "alwaysStrict": true,
     "baseUrl": ".",
     "declaration": true,
     "declarationDir": "./typings",
@@ -16,10 +17,14 @@
     "noEmit": true,
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": true,
     "noImplicitThis": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
     "strictNullChecks": true,
+    "strictPropertyInitialization": true,
     "stripInternal": true,
     "target": "es2019",
     "types": ["mocha", "node"]
