lint staged and install scripts

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sapper": "sleep 4 && cd examples/sapper && npm run dev",
     "kit": "sleep 4 && cd examples/kit && npm run dev",
     "install:all": "sh ./scripts/install.sh",
-    "lint": "cd .config && lint-staged",
+    "lint": "lint-staged --config .config/lint-staged.config.cjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "push": "sh ./scripts/push.sh",
     "postinstall": "rm -rf .config/husky && husky install .config/husky && husky add .config/husky/pre-commit \"npm run lint\""
