--- a/package/package.json
+++ b/package/package.json
@@ -36,6 +36,8 @@
   ],
   "scripts": {
     "dev": "cross-env PACKAGE_DEV=true rollup -c -w",
+    "install:all": "sh ./scripts/install.sh",
+    "install:clean": "sh ./scripts/clean-install.sh",
     "build": "cross-env NODE_ENV=true && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1",
     "minor": "npm run build && npm version minor --force && npm publish",
