--- a/examples/kit/package.json
+++ b/examples/kit/package.json
@@ -30,8 +30,8 @@
     "esm": "3.2.25",
     "prettier": "2.2.1",
     "prettier-plugin-svelte": "2.2.0",
-    "svelte": "3.38.2",
-    "svelte-preprocess": "4.7.3",
+    "svelte": "^3.38.2",
+    "svelte-preprocess": "^4.7.3",
     "tslib": "2.2.0",
     "typescript": "4.2.4",
     "vite": "2.3.2"
