--- a/examples/sapper/package.json
+++ b/examples/sapper/package.json
@@ -36,8 +36,8 @@
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-url": "6.0.0",
     "@signalchain/rollup-plugin-env-gen": "file:../../package",
-    "@signalchain/svelte-forms": "0.1.4",
-    "@signalchain/utils": "0.1.6",
+    "@signalchain/svelte-forms": "file:~/Projects/packages/svelte-forms/svelte-forms",
+    "@signalchain/utils": "file:~/Projects/packages/utils",
     "@testing-library/cypress": "7.0.6",
     "cross-env": "7.0.3",
     "cssnano": "5.0.2",
