--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "run-p engine sapper kit",
+    "build": "cd package && npm run build",
     "engine": "cd package && npm run dev",
     "sapper": "sleep 4 && cd examples/sapper && npm run dev",
     "kit": "sleep 4 && cd examples/kit && npm run dev",
