--- a/package/package.json
+++ b/package/package.json
@@ -4,11 +4,13 @@
   "author": "",
   "license": "",
   "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "exports": {
     "./package.json": "./package.json",
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs.js"
+      "require": "./dist/index.cjs"
     }
   },
   "types": "./typings/types.d.ts",
