--- a/package/package.json
+++ b/package/package.json
@@ -1,76 +1,71 @@
 {
-  "name": "@signalchain/rollup-plugin-env-gen",
-  "version": "0.3.0",
-  "author": "",
-  "license": "",
-  "type": "module",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
-  "types": "./typings/types.d.ts",
-  "description": "[WIP]",
-  "keywords": [
-    "graphql",
-    "graphql client",
-    "graphql fetch"
-  ],
-  "bugs": {
-    "email": "todo@example.com",
-    "url": "https://github.com/username/theme-engine/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/username/theme-engine"
-  },
-  "files": [
-    "dist",
-    "typings",
-    "package.json",
-    "LICENSE",
-    "README.md"
-  ],
-  "scripts": {
-    "dev": "cross-env PACKAGE_DEV=true rollup -c -w",
-    "build": "cross-env NODE_ENV=true && rollup -c",
-    "install:all": "sh ./scripts/install.sh",
-    "install:clean": "sh ./scripts/clean-install.sh",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "minor": "npm run build && npm version minor --force && npm publish",
-    "patch": "npm run build && npm version patch --force && npm publish",
-    "push": "sh ./scripts/push.sh"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "18.1.0",
-    "@rollup/plugin-node-resolve": "13.0.0",
-    "@types/mocha": "8.2.2",
-    "@types/node": "15.0.2",
-    "@typescript-eslint/eslint-plugin": "4.22.1",
-    "@typescript-eslint/parser": "4.22.1",
-    "cross-env": "7.0.3",
-    "eslint": "7.25.0",
-    "eslint-config-standard": "16.0.2",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-json": "3.0.0",
-    "eslint-plugin-mocha": "8.1.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-promise": "4.3.1",
-    "esm": "3.2.25",
-    "kleur": "4.1.4",
-    "mocha": "8.3.2",
-    "prettier": "2.2.1",
-    "rollup": "2.47.0",
-    "rollup-plugin-filesize": "9.1.1",
-    "rollup-plugin-typescript2": "0.30.0",
-    "ts-node": "9.1.1",
-    "tslib": "2.2.0",
-    "typescript": "4.2.4"
-  }
+	"name": "@signalchain/rollup-plugin-env-gen",
+	"version": "0.3.0",
+	"author": "",
+	"license": "",
+	"type": "module",
+	"main": "./dist/index.cjs",
+	"module": "./dist/index.js",
+	"exports": {
+		"./package.json": "./package.json",
+		".": {
+			"import": "./dist/index.js",
+			"require": "./dist/index.cjs"
+		}
+	},
+	"types": "./types/types.d.ts",
+	"description": "[WIP]",
+	"keywords": [
+		"graphql",
+		"graphql client",
+		"graphql fetch"
+	],
+	"bugs": {
+		"email": "todo@example.com",
+		"url": "https://github.com/username/theme-engine/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/username/theme-engine"
+	},
+	"files": [
+		"dist",
+		"types",
+		"package.json",
+		"LICENSE",
+		"README.md"
+	],
+	"scripts": {
+		"dev": "cross-env PACKAGE_DEV=true rollup -c -w",
+		"build": "cross-env NODE_ENV=true && rollup -c",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"minor": "npm run build && npm version minor --force && npm publish",
+		"patch": "npm run build && npm version patch --force && npm publish"
+	},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "18.1.0",
+		"@rollup/plugin-node-resolve": "13.0.0",
+		"@rollup/plugin-typescript": "^8.3.1",
+		"@signalchain/utils": "0.6.2",
+		"@types/mocha": "8.2.2",
+		"@types/node": "15.0.2",
+		"@typescript-eslint/eslint-plugin": "5.14.0",
+		"@typescript-eslint/parser": "5.14.0",
+		"cross-env": "7.0.3",
+		"eslint": "8.10.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-import-resolver-typescript": "2.5.0",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-json": "3.1.0",
+		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-prettier": "4.0.0",
+		"esm": "3.2.25",
+		"kleur": "4.1.4",
+		"mocha": "8.3.2",
+		"prettier": "2.2.1",
+		"rollup": "2.47.0",
+		"rollup-plugin-filesize": "9.1.1",
+		"tslib": "2.3.1",
+		"typescript": "4.6.2"
+	}
 }
