--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,34 +1,34 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": true,
-    "alwaysStrict": true,
-    "baseUrl": ".",
-    "declaration": true,
-    "declarationDir": "./typings",
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "importHelpers": true,
-    "lib": ["es2019", "dom", "dom.iterable"],
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "noEmit": true,
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "stripInternal": true,
-    "target": "es2019",
-    "types": ["mocha", "node"]
-  },
-  "include": ["src", "rimraf.js"],
-  "exclude": ["node_modules", "dist", "typings"]
+	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
+		"allowUnreachableCode": true,
+		"alwaysStrict": true,
+		"baseUrl": ".",
+		"declaration": true,
+		"declarationDir": "./types",
+		"declarationMap": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"importHelpers": true,
+		"lib": ["es2019", "dom", "dom.iterable"],
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"noEmit": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitThis": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
+		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
+		"stripInternal": true,
+		"target": "es2019",
+		"types": ["mocha", "node"],
+		"paths": {
+			"@signalchain/utils/rimraf": ["node_modules/@signalchain/utils/dist/rimraf"]
+		}
+	},
+	"exclude": ["node_modules", "dist", "types"]
 }
