--- a/examples/kit/.prettierrc
+++ b/examples/kit/.prettierrc
@@ -1,17 +1,6 @@
 {
-	"arrowParens": "avoid",
-	"bracketSpacing": true,
-	"endOfLine": "lf",
-	"printWidth": 80,
-	"semi": false,
-	"singleQuote": false,
-	"tabWidth": 2,
-	"trailingComma": "all",
-	"useTabs": false,
-
-	"svelteSortOrder": "scripts-markup-styles",
-	"svelteAllowShorthand": true,
-	"svelteBracketNewLine": true,
-	"svelteStrictMode": false,
-	"svelteIndentScriptAndStyle": true
+	"useTabs": true,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100
 }
