--- a/package/package.json
+++ b/package/package.json
@@ -3,30 +3,30 @@
 	"version": "0.3.0",
 	"author": "",
 	"license": "",
+	"description": "[WIP]",
 	"type": "module",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
+	"types": "./types/types.d.ts",
 	"exports": {
-		"./package.json": "./package.json",
 		".": {
 			"import": "./dist/index.js",
-			"require": "./dist/index.cjs"
+			"require": "./dist/index.cjs",
+			"types": "./types/types.d.ts"
+		},
+		"./generate": {
+			"import": "./dist/generate.js",
+			"require": "./dist/generate.cjs"
 		}
 	},
-	"types": "./types/types.d.ts",
-	"description": "[WIP]",
 	"keywords": [
 		"graphql",
 		"graphql client",
 		"graphql fetch"
 	],
-	"bugs": {
-		"email": "todo@example.com",
-		"url": "https://github.com/username/theme-engine/issues"
-	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/username/theme-engine"
+		"url": "https://github.com/username/repo"
 	},
 	"files": [
 		"dist",
@@ -43,29 +43,33 @@
 		"patch": "npm run build && npm version patch --force && npm publish"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "18.1.0",
-		"@rollup/plugin-node-resolve": "13.0.0",
+		"@rollup/plugin-commonjs": "^21.0.3",
+		"@rollup/plugin-node-resolve": "^13.1.3",
 		"@rollup/plugin-typescript": "^8.3.1",
-		"@signalchain/utils": "0.6.2",
-		"@types/mocha": "8.2.2",
-		"@types/node": "15.0.2",
-		"@typescript-eslint/eslint-plugin": "5.14.0",
-		"@typescript-eslint/parser": "5.14.0",
-		"cross-env": "7.0.3",
-		"eslint": "8.10.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-import-resolver-typescript": "2.5.0",
-		"eslint-plugin-import": "2.25.4",
-		"eslint-plugin-json": "3.1.0",
-		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-prettier": "4.0.0",
-		"esm": "3.2.25",
-		"kleur": "4.1.4",
-		"mocha": "8.3.2",
-		"prettier": "2.2.1",
-		"rollup": "2.47.0",
-		"rollup-plugin-filesize": "9.1.1",
-		"tslib": "2.3.1",
-		"typescript": "4.6.2"
+		"@signalchain/utils": "^0.6.2",
+		"@types/mocha": "^8.2.2",
+		"@types/node": "^17.0.23",
+		"@typescript-eslint/eslint-plugin": "^5.17.0",
+		"@typescript-eslint/parser": "^5.17.0",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.12.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^2.7.0",
+		"eslint-plugin-import": "^2.25.4",
+		"eslint-plugin-json": "^3.1.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"esm": "^3.2.25",
+		"kleur": "^4.1.4",
+		"mocha": "^8.3.2",
+		"prettier": "^2.6.1",
+		"rollup": "^2.70.1",
+		"rollup-plugin-dts": "^4.2.0",
+		"rollup-plugin-filesize": "^9.1.2",
+		"tslib": "^2.3.1",
+		"typescript": "^4.6.3"
+	},
+	"peerDependencies": {
+		"kleur": ">=4.0.0"
 	}
 }
