moved vite config to .config dir

--- a/package/.npmignore
+++ b/package/.npmignore
@@ -1,17 +1,13 @@
-.bin
+.config
 .DS_Store
+dist
+node_modules
+src
+types
 .eslintignore
-.eslintrc.js
-.github
+.eslintrc.cjs
 .gitignore
-.mocharc.json
 .prettierc
 .prettierignore
-.vscode
-CONTRIBUTING.md
-node_modules
-rimraf.js
 rollup.config.js
-scripts
-src
 tsconfig.json
