--- a/package/package.json
+++ b/package/package.json
@@ -38,7 +38,7 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=development rollup -c -w",
 		"build": "cross-env NODE_ENV=production && rollup -c",
-		"test": "vitest",
+		"test": "vitest --config=.config/vite.config.ts",
 		"minor": "npm run minor:pre && npm publish",
 		"minor:pre": "npm run build && npm version minor",
 		"patch": "npm run patch:pre && npm publish",
