--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -5,7 +5,7 @@
 		"esModuleInterop": true,
 		"baseUrl": ".",
 		"importHelpers": true,
-		"lib": ["es2019"],
+		"lib": ["es2019", "dom"],
 		"module": "es2020",
 		"moduleResolution": "node",
 		"noEmit": true,
