--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -2,18 +2,29 @@
 	"compilerOptions": {
 		"allowSyntheticDefaultImports": true,
 		"allowUnreachableCode": true,
-		"esModuleInterop": true,
+		"alwaysStrict": true,
 		"baseUrl": ".",
+		"declaration": true,
+		"declarationDir": "./types",
+		"declarationMap": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
 		"importHelpers": true,
-		"lib": ["es2019", "dom"],
-		"module": "es2020",
+		"lib": ["es2019", "dom", "dom.iterable"],
+		"module": "ESNext",
 		"moduleResolution": "node",
 		"noEmit": true,
+		"noFallthroughCasesInSwitch": true,
 		"noImplicitThis": true,
 		"resolveJsonModule": false,
 		"skipLibCheck": true,
+		"strictBindCallApply": true,
+		"strictFunctionTypes": true,
 		"strictNullChecks": true,
+		"strictPropertyInitialization": true,
 		"target": "es2019",
+		"stripInternal": true,
+		"types": ["mocha", "node"],
 		"paths": {
 			"@signalchain/utils/rimraf": ["node_modules/@signalchain/utils/dist/rimraf"]
 		}
