--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -26,6 +26,8 @@
 		"stripInternal": true,
 		"types": ["mocha", "node"],
 		"paths": {
+			"@signalchain/utils/objectToString": ["node_modules/@signalchain/utils/dist/objectToString"],
+			"@signalchain/utils/printElapsed": ["node_modules/@signalchain/utils/dist/printElapsed"],
 			"@signalchain/utils/rimraf": ["node_modules/@signalchain/utils/dist/rimraf"]
 		}
 	},
