--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
 		"@typescript-eslint/eslint-plugin": "^5.17.0",
 		"@typescript-eslint/parser": "^5.17.0",
 		"eslint": "^8.12.0",
-		"eslint-config-prettier": "8.5.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-import-resolver-typescript": "^2.7.1",
-		"eslint-plugin-import": "2.25.4",
-		"eslint-plugin-json": "3.1.0",
-		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-prettier": "4.0.0",
-		"husky": "7.0.4",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-json": "^3.1.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
-		"npm-run-all": "4.1.5",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.6.2",
-		"tslib": "2.3.1",
+		"tslib": "^2.3.1",
 		"typescript": "^4.6.3"
 	}
 }
