--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,5 +1,7 @@
 {
 	"compilerOptions": {
+		"allowJs": true,
+		"checkJs": true,
 		"allowSyntheticDefaultImports": true,
 		"allowUnreachableCode": true,
 		"alwaysStrict": true,
